# cds-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  cern_portal_guide.md  pyproject.toml  test_integration.py
.github/: sanad.lock.json
.github/workflows/: release.yml  test.yml
cds_mcp/: __init__.py  auth.py  cds_client.py  schema.py  server.py  tools.py
tests/: __init__.py  test_cds_client.py  test_integration.py  test_mcp_server.py  test_schema.py  test_tools.py
tests/dev/: debug_auth.py  debug_mcp_client.py  test_auth.py
