[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cds-mcp"
version = "0.1.1"
description = "Model Context Protocol server for CERN Document Server (CDS)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Mohamed Elashri", email = "melashri@cern.ch"},
]
keywords = ["mcp", "model-context-protocol", "cern", "cds", "document-server", "physics", "research", "hep"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "mcp>=1.0.0",
    "PyJWT>=2.8.0",
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/MohamedElashri/cds-mcp"
Repository = "https://github.com/MohamedElashri/cds-mcp"
Issues = "https://github.com/MohamedElashri/cds-mcp/issues"
Documentation = "https://github.com/MohamedElashri/cds-mcp#readme"
Changelog = "https://github.com/MohamedElashri/cds-mcp/blob/main/CHANGELOG.md"

[project.scripts]
cds-mcp = "cds_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.24.0",
    "mypy>=1.7.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]


[tool.setuptools.packages.find]
where = ["."]
include = ["cds_mcp*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "responses>=0.26.0",
    "ruff>=0.15.8",
    "types-requests>=2.33.0.20260327",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/dev"]
